4_KUBERNETES/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
	name: example-nginx-deployment
	labels:
		app: example-nginx
spec:
	replicas: 2
	selector:
		matchLabels:
			app: example-nginx
	template:
		metadata:
			labels:
				app: example-nginx
		spec:
			containers:
				- name: nginx
					image: nginx:stable-alpine
					ports:
						- containerPort: 80
					volumeMounts:
						- name: web-content
							mountPath: /usr/share/nginx/html/index.html
							subPath: index.html
					readinessProbe:
						httpGet:
							path: /
							port: 80
						initialDelaySeconds: 5
						periodSeconds: 10
					resources:
						requests:
							cpu: "50m"
							memory: "64Mi"
						limits:
							cpu: "250m"
							memory: "128Mi"
			volumes:
				- name: web-content
					configMap:
						name: example-config
