4_KUBERNETES/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
	name: example-nginx-statefulset
	labels:
		app: example-nginx
spec:
	serviceName: "example-nginx-headless"
	replicas: 2
	selector:
		matchLabels:
			app: example-nginx
	template:
		metadata:
			labels:
				app: example-nginx
		spec:
			containers:
				- name: nginx
					image: nginx:stable-alpine
					ports:
						- containerPort: 80
					volumeMounts:
						- name: web-data
							mountPath: /usr/share/nginx/html
	volumeClaimTemplates:
		- metadata:
				name: web-data
			spec:
				accessModes: [ "ReadWriteOnce" ]
				resources:
					requests:
						storage: 1Gi
